@@ -1,24 +1,17 @@
 DIST ant-1.7.0-gentoo.tar.bz2 11720 RMD160 51d24f2c0c98195ed6ef1852045201a567a5d9ea SHA1 41acb8398a5ac9713dec30d6305b5abc6c014fff SHA256 7b1e0c63bec193c010c3fcca7a3524e2e35cc4ca56b86e4571737ac1e169e35c
 DIST apache-ant-1.7.0-src.tar.bz2 6831017 RMD160 e18ecde1996401f03529d80d2b6f3be2c55e64ab SHA1 3f01c35265ba50a49caafe1fb34ec8998bf45eb3 SHA256 a6698e8420f6d1cefd9e02c5a6b610b84495a3f9bfe1fc9e1b4fe8a8769e3779
-EBUILD ant-apache-bsf-1.7.0-r1.ebuild 998 RMD160 5b5d2004766014acb94cdd1693ed95bf1777bef4 SHA1 3e2081c9f516c291654449cd14632dbc958687d4 SHA256 9cf1fd7569266a4b864b3868adc6d26d51e2455d104993016609cc4bf86e7234
-MD5 25cceeb3c84303dd4695535059f72a39 ant-apache-bsf-1.7.0-r1.ebuild 998
-RMD160 5b5d2004766014acb94cdd1693ed95bf1777bef4 ant-apache-bsf-1.7.0-r1.ebuild 998
-SHA256 9cf1fd7569266a4b864b3868adc6d26d51e2455d104993016609cc4bf86e7234 ant-apache-bsf-1.7.0-r1.ebuild 998
-EBUILD ant-apache-bsf-1.7.0.ebuild 416 RMD160 80fc2ec3ed124db60c0a16b1a9b0dd6fb9c9dc61 SHA1 ef6d4bcaf9d280728f5d4447db6a4f090819aaec SHA256 6656504860efc7730248bb90ed856824985ac9efd2213a3e04806f0f3217ecef
-MD5 6af1b3b0c5c91f571f0c118461743b2e ant-apache-bsf-1.7.0.ebuild 416
-RMD160 80fc2ec3ed124db60c0a16b1a9b0dd6fb9c9dc61 ant-apache-bsf-1.7.0.ebuild 416
-SHA256 6656504860efc7730248bb90ed856824985ac9efd2213a3e04806f0f3217ecef ant-apache-bsf-1.7.0.ebuild 416
-MISC ChangeLog 1774 RMD160 ec2abc78b773cbef537f46536d0a3daeb499e9e7 SHA1 e845a9cd61ffdf27c28081b6bffe5378d1afd085 SHA256 a5854c5388b5b892594a36015fcfb79220831a457b04fcbbd95f2b2c3829a9b2
-MD5 00f9e9973661b1c898b04094a04c818a ChangeLog 1774
-RMD160 ec2abc78b773cbef537f46536d0a3daeb499e9e7 ChangeLog 1774
-SHA256 a5854c5388b5b892594a36015fcfb79220831a457b04fcbbd95f2b2c3829a9b2 ChangeLog 1774
+EBUILD ant-apache-bsf-1.7.0-r1.ebuild 1185 RMD160 43d3f52b112aa81e5c0a81b493438d811cde6c04 SHA1 e0c9f80e0b356dae5a984d7ac92946c4b7e91c77 SHA256 a9e286d9c4fcbc288bddaa20ea2763726c9b482fb8097d5bb8e9bb819ea23bbd
+MD5 732ae277099487c3973b68d7d025a238 ant-apache-bsf-1.7.0-r1.ebuild 1185
+RMD160 43d3f52b112aa81e5c0a81b493438d811cde6c04 ant-apache-bsf-1.7.0-r1.ebuild 1185
+SHA256 a9e286d9c4fcbc288bddaa20ea2763726c9b482fb8097d5bb8e9bb819ea23bbd ant-apache-bsf-1.7.0-r1.ebuild 1185
+MISC ChangeLog 1892 RMD160 de6caa86659d9ccff54fa56d041608b078323908 SHA1 2a090e9c319935e8b5687eeac391d74f396dbeee SHA256 8331b9856bd6e2727a364614e0a175e02d1cce3fa69d4c99862a3554a686531d
+MD5 d37f8c7307e2092437e1faa65007f6da ChangeLog 1892
+RMD160 de6caa86659d9ccff54fa56d041608b078323908 ChangeLog 1892
+SHA256 8331b9856bd6e2727a364614e0a175e02d1cce3fa69d4c99862a3554a686531d ChangeLog 1892
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 MD5 123cf9440c1d4ac78f2caba1624765f9 metadata.xml 158
 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 metadata.xml 158
 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb metadata.xml 158
-MD5 a7b309b2642e68941a45f02dd5a5c96d files/digest-ant-apache-bsf-1.7.0 518
-RMD160 d03eca1d95f01c905fe3b77f5a2c39ac67d13c22 files/digest-ant-apache-bsf-1.7.0 518
-SHA256 99ca534318f44bd6e836a90ba168e57156af32905f50619d14887361de2823b9 files/digest-ant-apache-bsf-1.7.0 518
 MD5 a7b309b2642e68941a45f02dd5a5c96d files/digest-ant-apache-bsf-1.7.0-r1 518
 RMD160 d03eca1d95f01c905fe3b77f5a2c39ac67d13c22 files/digest-ant-apache-bsf-1.7.0-r1 518
 SHA256 99ca534318f44bd6e836a90ba168e57156af32905f50619d14887361de2823b9 files/digest-ant-apache-bsf-1.7.0-r1 518
