@@ -1,6 +1,0 @@
-MD5 9e834373c21fe197ac66f4da51dd47a5 ant-1.7.0-gentoo.tar.bz2 11720
-RMD160 51d24f2c0c98195ed6ef1852045201a567a5d9ea ant-1.7.0-gentoo.tar.bz2 11720
-SHA256 7b1e0c63bec193c010c3fcca7a3524e2e35cc4ca56b86e4571737ac1e169e35c ant-1.7.0-gentoo.tar.bz2 11720
-MD5 22b378e27ab300e4d73bf09d91c7e2a6 apache-ant-1.7.0-src.tar.bz2 6831017
-RMD160 e18ecde1996401f03529d80d2b6f3be2c55e64ab apache-ant-1.7.0-src.tar.bz2 6831017
-SHA256 a6698e8420f6d1cefd9e02c5a6b610b84495a3f9bfe1fc9e1b4fe8a8769e3779 apache-ant-1.7.0-src.tar.bz2 6831017
