@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-apache-bsf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-bsf/ChangeLog,v 1.11 2007/05/24 20:01:51 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-bsf/ChangeLog,v 1.12 2007/05/28 23:37:24 caster Exp $
+
+  28 May 2007; Vlastimil Babka <caster@gentoo.org>
+  ant-apache-bsf-1.7.0-r1.ebuild:
+  Update pkg_postinst messages.
 
 *ant-apache-bsf-1.7.0-r1 (24 May 2007)
 
